--- a/frontend/src/blocks/header/__info/header__info.css
+++ b/frontend/src/blocks/header/__info/header__info.css
@@ -2,3 +2,9 @@
     display: flex;
     flex-direction: row;
 }
+
+@media screen and (max-width: 940px) {
+    .header__info {
+        margin-right: 30px;
+    }
+}
