--- a/frontend/src/blocks/header/__link/header__link.css
+++ b/frontend/src/blocks/header/__link/header__link.css
@@ -13,3 +13,9 @@
 .header__link:hover {
     opacity: .6;
 }
+
+@media screen and (max-width: 940px) {
+    .header__link {
+        margin-right: 30px;
+    }
+}
